--- a/notebooks/nosql_object_storage_lesson.ipynb
+++ b/notebooks/nosql_object_storage_lesson.ipynb
@@ -37,8 +37,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Connecting to Redis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Connection Code**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +61,19 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,10 +83,131 @@
     "# import redis\n",
     "\n",
     "# r = redis.Redis(\n",
-    "#   host='<REDIS-URL>', # E.g.'redis-10908.c252.ap-southeast-1-1.ec2.cloud.redislabs.com'\n",
+    "#   host='<REDIS-URL>', # E.g.'redis-xxxxx.c252.ap-southeast-1-1.ec2.cloud.redislabs.com'\n",
     "#   port=10908,\n",
     "#   password='<YOUR-PASSWORD>' \n",
     "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: red\"><b>IMPORTANT</b></span>\n",
+    "\n",
+    "<span style=\"color: red\"><b>Your connection secrets including the password is yours. Do not share the secrets above. Do not sync the information above to your public repository. To safely keep your password and connection string locally. Please run the following cell. Then you need to copy the host, port and password to the dotenv file.</b></span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Creating a dotenv Template Locally**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: blue\"><b>You only need to run the cell below ONCE. Do not run this cell again if you have copied your password.</b></span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Template file created: ../.env\n",
+      "➡️ Please open the '../.env' file and replace the 'XXXXX' placeholders with your actual secrets.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cell: Create the .env Template File\n",
+    "# -----------------------------------\n",
+    "template_content = \"\"\"# .env file for Redis Connection\n",
+    "# 1. REPLACE the placeholder values (XXXXX) below with the actual\n",
+    "#    Host, Port, Username, and Password from the connection code in the cell above.\n",
+    "# 2. DO NOT include quotation marks around the values.\n",
+    "\n",
+    "REDIS_HOST=XXXXX # e.g., redis-xxxxxxx-1.ec2.cloud.redislabs.com\n",
+    "REDIS_PORT=XXXXX # e.g., 10561\n",
+    "REDIS_USERNAME=default\n",
+    "REDIS_PASSWORD=XXXXX\n",
+    "\"\"\"\n",
+    "\n",
+    "# Use mode 'w' to overwrite the file cleanly\n",
+    "try:\n",
+    "    with open('../.env', 'w') as f:\n",
+    "        f.write(template_content)\n",
+    "\n",
+    "    print(\"✅ Template file created: ../.env\")\n",
+    "    print(\"➡️ Please open the '../.env' file and replace the 'XXXXX' placeholders with your actual secrets.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error creating file: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Testing Redis Connection with dotenv**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bar\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import redis\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "REDIS_HOST = os.getenv('REDIS_HOST')\n",
+    "REDIS_PORT = os.getenv('REDIS_PORT')\n",
+    "REDIS_USERNAME = os.getenv('REDIS_USERNAME')\n",
+    "REDIS_PASSWORD = os.getenv('REDIS_PASSWORD')\n",
+    "\n",
+    "import redis\n",
+    "\n",
+    "r = redis.Redis(\n",
+    "    host=REDIS_HOST,\n",
+    "    port=REDIS_PORT,\n",
+    "    decode_responses=True,\n",
+    "    username=REDIS_USERNAME,\n",
+    "    password=REDIS_PASSWORD,\n",
+    ")\n",
+    "\n",
+    "success = r.set('foo', 'bar')\n",
+    "# True\n",
+    "\n",
+    "result = r.get('foo')\n",
+    "print(result)\n",
+    "# >>> bar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: red\"><b>IMPORTANT</b></span>\n",
+    "\n",
+    "<span style=\"color: red\"><b>If your connection is good using dotenv. Please remove what you have pasted previously on the `Connection Code`. </b></span>"
    ]
   },
   {
@@ -84,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +235,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +262,7 @@
        "'Aaron'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +289,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +309,7 @@
        "'Bob'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,16 +336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "24"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +365,7 @@
        "'Bob'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +392,7 @@
        "True"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +415,7 @@
        "['John', '30']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,16 +447,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +483,7 @@
        "'zl@gmail.com'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +510,7 @@
        "{'age': '21', 'email': 'zl@gmail.com', 'hobby': 'coding'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -617,6 +759,13 @@
     "\n",
     "print(\"Downloaded blob {} to {}.\".format(blob.name, output_file_name))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -635,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.14"
   },
   "orig_nbformat": 4
  },
