Updated GCP default credential

--- a/notebooks/assignment.ipynb
+++ b/notebooks/assignment.ipynb
@@ -101,18 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "4f486446",
    "metadata": {},
    "outputs": [],
    "source": [
     "from google.cloud import storage\n",
-    "client = storage.Client.create_anonymous_client()"
+    "client = storage.Client(project='project-6d6e72cf-66ac-4cc8-95b') #client = storage.Client.create_anonymous_client()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "9d631916",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "8cedfe75",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
     "\n",
     "def list_first_10_objects():\n",
     "    # Initialize the client\n",
-    "    client = storage.Client.create_anonymous_client()\n",
+    "    client = storage.Client(project='project-6d6e72cf-66ac-4cc8-95b') #client = storage.Client.create_anonymous_client()\n",
     "\n",
     "    # Get the bucket\n",
     "    bucket = client.bucket(\"gcp-public-data-landsat\")\n",
